Fix slider on mobile

--- a/assets/quiz-custom.scss
+++ b/assets/quiz-custom.scss
@@ -580,7 +580,7 @@
                     display: none;
                 }
                 .slide-bottom {
-                    padding: 10px 50px;
+                    padding: 10px 0px;
                     margin-top: 15px;
                     .btn-section-cover {
                         font-size: 14px;
@@ -729,25 +729,31 @@
                         margin-top: 5px;
                         display: flex;
                         align-items: center;
+                        justify-content: space-between;
                         span.text {
                             font-size: 9px;
-                            padding-top: 9px;
+                            padding-top: 0px;
                         }
-                        .btn-right-arrow {
-                            margin-left: 38px;
-                            border-width: 1px;
-                            width: 5px;
-                            height: 5px;
-                            border-color: black;
-                            &::before {
-                                height: 1px;
-                                width: 25px;
-                                right: -3px;
-                                margin-right: -1px;
-                                top: 8px;
-                                background-color: black;
+                        .btn-right-arrow-wrapper {
+                            width: 60%;
+                            height: 27px;
+                            .btn-right-arrow {
+                                margin-left: 38px;
+                                border-width: 1px;
+                                width: 5px;
+                                height: 5px;
+                                border-color: black;
+                                &::before {
+                                    height: 1px;
+                                    width: 25px;
+                                    right: -3px;
+                                    margin-right: -1px;
+                                    top: 8px;
+                                    background-color: black;
+                                }
                             }
                         }
+                        
                     }
                 }
             }
