--- a/assets/quiz.scss
+++ b/assets/quiz.scss
@@ -191,6 +191,7 @@
 }
 .slide-header-stacked img {
   max-width: 500px;
+  width: 100%;
 }
 .slide-bottom {
   text-align: center;
